# Lisa

./: .gitattributes  .gitignore  README.md
Config/: Lisa.awc
Config/QMake/: Lisa.pri
Impl/LisaClient/: LisaClient.acc  LisaClient.accl  LisaClient.qrc  Main.cpp
Impl/LisaClient/CMake/: CMakeLists.txt
Impl/LisaClient/Install/: LisaClient.iss  install_DebugVC16_64.bat  install_ReleaseVC16_64.bat
Impl/LisaClient/QMake/: LisaClient.pro
Impl/LisaClient/VC/: LisaClient.rc.xtracf
Impl/LisaConverter/: LisaConverter.acc  LisaConverter.accl  Main.cpp
Impl/LisaConverter/CMake/: CMakeLists.txt
Impl/LisaConverter/Install/: install_DebugVC16_64.bat  install_ReleaseVC16_64.bat
Impl/LisaConverter/VC/: FileSubstitCopyApp.acc  LisaClient.rc.xtracf
Impl/LisaDbExe/: LisaDbExe.acc  LisaDbExe.accl  LisaDbExe.qrc  Main.cpp
Impl/LisaDbExe/CMake/: CMakeLists.txt
Impl/LisaDbExe/QMake/: LisaDb.pro  LisaDbExe.pro
Impl/LisaDbPck/: LisaDbPck.cpp  LisaDbPck.h
Impl/LisaDbPck/CMake/: CMakeLists.txt
Impl/LisaDbPck/QMake/: LisaDbPck.pro
Impl/LisaExe/: Lisa.acc  Lisa.accl  Lisa.qrc  Main.cpp
Impl/LisaExe/CMake/: CMakeLists.txt
Impl/LisaExe/QMake/: Lisa.pro
Impl/LisaExe/Resources/: DesignToken.json
Impl/LisaExe/VC/: FileSubstitCopyApp.acc  Lisa.rc.xtracf
Impl/LisaLoc/: LisaLoc.qrc
Impl/LisaLoc/CMake/: CMakeLists.txt
Impl/LisaLoc/QMake/: LisaLoc.pro
Impl/LisaLoc/Translations/: Lisa_de_DE.qm  Lisa_de_DE.ts  Lisa_en_US.qm  Lisa_en_US.ts  Lisa_fr_FR.ts  Lisa_it_IT.ts  Lisa_jp_JP.qm  Lisa_jp_JP.ts  Lisa_pl_PL.ts  Lisa_ru_RU.qm  Lisa_ru_RU.ts  Lisa_zh_ZH.qm  Lisa_zh_ZH.ts  ReleaseTranslations.bat  UpdateAllTranlsations.bat  Update_de_DE.bat  Update_en_US.bat  Update_fr_FR.bat  Update_it_IT.bat  Update_jp_JP.bat  Update_pl_PL.bat  Update_ru_RU.bat  Update_zh_ZH.bat
Impl/LisaQml/: LisaQml.acc  LisaQml.accl  LisaQml.qrc  Main.cpp
Impl/LisaQml/CMake/: CMakeLists.txt
Impl/LisaQml/VC/: FileSubstitCopyApp.acc  (+1 more)
Impl/LisaQmlExe/: LisaQmlExe.acc  LisaQmlExe.accl  Main.cpp
Impl/LisaQmlExe/CMake/: CMakeLists.txt  InstallationCollectionView.qml
Impl/LisaSdk/: LisaSdk.acc  LisaSdk.accl  LisaSdk.cpp  LisaSdk.h
Impl/LisaSdk/CMake/: CMakeLists.txt
Impl/LisaServer/: LisaFeatures.h  LisaServer.acc  LisaServer.accl  LisaServer.qrc  Main.cpp
Impl/LisaServer/CMake/: CMakeLists.txt
Impl/LisaServerConfigurator/: LisaServerConfigurator.acc  LisaServerConfigurator.accl  Main.cpp
Impl/LisaServerConfigurator/CMake/: CMakeLists.txt
Include/lisa/: Version.h
Include/lisadb/: CDatabaseConverterComp.cpp  CDatabaseConverterComp.h  lisadb.qrc
Include/lisaqml/: lisa.json  lisa_dark.theme  lisa_decorators.theme  lisa_light.theme  lisaqml.qrc
Include/lisaqml/CMake/: CMakeLists.txt
Install/InternalParts/: Create_Commercial.acc
Install/LisaClient/: LisaClient.iss  install_DebugVC16_64.bat  install_ReleaseVC16_64.bat
Install/LisaConverter/: LisaClient.iss  install_ReleaseVC16_64.bat
Install/LisaServer/: LisaServer.iss  ReadMe.txt  install_DebugVC17_64.bat  install_ReleaseVC17_64.bat
Install/LisaServerConfigurator/: install_DebugVC16_64.bat  install_ReleaseVC16_64.bat
Partitura/LisaGraphQlVoce.arp/: LisaGQLEngine.acc  LisaGQLEngine.accl
Partitura/LisaQmlVoce.arp/: AccountsPage.acc  AccountsPage.accl  AdministrationPage.acc  AdministrationPage.accl  AdministrationPages.acc  AdministrationPages.accl  InstancesPage.acc  InstancesPage.accl  LicensesPage.acc  LicensesPage.accl  LisaApplicationSettings.acc  LisaApplicationSettings.accl  LisaHandlers.acc  LisaHandlers.accl  LisaServer.acc  LisaServer.accl  LisaServerBase.acc  LisaServerBase.accl  LocalSettings.acc  LocalSettings.accl  PackagesPage.acc  PackagesPage.accl  Pages.acc  Pages.accl  ProductsPage.acc  ProductsPage.accl  RolesPage.acc  RolesPage.accl  ServerPageData.acc  ServerPageData.accl  ServerPageRepresentation.acc  ServerPageRepresentation.accl  TestPage.acc  TestPage.accl  UsersPage.acc  UsersPage.accl
Partitura/LisaVoce.arp/: AccountCollectionPage.acc  AccountCollectionPage.accl  AccountCommandPermissions.acc  AccountCommandPermissions.accl  AccountDatabasePage.acc  AccountDatabasePage.accl  AccountEditCommandPermissions.acc  AccountEditCommandPermissions.accl  AccountPermissions.acc  AccountPermissions.accl  AccountRepository.acc  AccountRepository.accl  AccountSqlRepository.acc  AccountSqlRepository.accl  AddressCollectionPage.acc  AddressCollectionPage.accl  AddressRepository.acc  AddressRepository.accl  AutorizationSettings.acc  AutorizationSettings.accl  CommandPermissions.acc  CommandPermissions.accl  ContactCollectionPage.acc  ContactInfoQmlEditor.acc  ContactInfoQmlEditor.accl  ContactRepository.acc  ContactRepository.accl  DesignSchema.acc  DesignSchema.accl  FeatureCollectionsPage.acc  FeatureCollectionsPage.accl  FeatureCollectionsRepository.acc  FeatureCollectionsRepository.accl  FeatureInfoProviderCollectionPage.acc  FeatureInfoProviderCollectionPage.accl  FeatureInfoProviderRepository.acc  FeatureInfoProviderRepository.accl  FeaturePackageDatabasePage.acc  FeaturePackageDatabasePage.accl  FeaturePackagePage.acc  (+73 more)
Tests/: .gitignore  ADAPTATION_GUIDE.md  OVERVIEW.md  QUICKSTART.md  README.RU.md  README.md  VERIFICATION.md  WINDOWS_LINUX_CONTAINERS.md  package.json  playwright.config.js  run-tests-linux-on-windows.bat
Tests/Docker/: .dockerignore  Dockerfile.linux  Dockerfile.windows  README.md  docker-compose.linux.yml  docker-compose.windows.yml  entrypoint.ps1  entrypoint.sh
Tests/GUI/: example.spec.js  utils.js  utils_base.js
Tests/Resources/: .gitkeep  README.md
Tests/Scripts/: normalize-shell-scripts.sh  run-all-tests.bat  run-all-tests.sh  run-docker-tests-linux.bat  run-docker-tests-linux.sh  run-docker-tests-windows.bat  setup.bat  setup.sh  validate-shell-scripts.sh
Tests/Startup/: .gitkeep  01-reset-db.bat  01-reset-db.sh  02-start-puma.bat  02-start-puma.sh  03-start-lisa.bat  03-start-lisa.sh
web/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: main.tsx
(+161 files in other folders)
